Bug 112177 - [CSS Exclusions][CSS Regions] Block children do not layout inline content correctly in a region with shape-inside set
Summary: [CSS Exclusions][CSS Regions] Block children do not layout inline content cor...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Zoltan Horvath
URL:
Keywords:
Depends on:
Blocks: 89256
  Show dependency treegraph
 
Reported: 2013-03-12 12:32 PDT by Bear Travis
Modified: 2013-03-28 14:00 PDT (History)
7 users (show)

See Also:


Attachments
Test File (5.08 KB, text/html)
2013-03-12 12:32 PDT, Bear Travis
no flags Details
proposed patch (16.36 KB, patch)
2013-03-27 11:13 PDT, Zoltan Horvath
webkit.review.bot: commit-queue-
Details | Formatted Diff | Diff
Archive of layout-test-results from gce-cr-linux-01 for chromium-linux-x86_64 (1.63 MB, application/zip)
2013-03-27 12:31 PDT, WebKit Review Bot
no flags Details
proposed patch - test modified to use Ahem font (15.80 KB, patch)
2013-03-27 14:30 PDT, Zoltan Horvath
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Bear Travis 2013-03-12 12:32:56 PDT
Created attachment 192788 [details]
Test File

See the attached test file. It lays out <p> content within a series of regions, the second of which has a shape-inside set. The content should layout inside a circle between two squares of content, but instead the circle content is pushed down almost to the bottom.
Comment 1 Zoltan Horvath 2013-03-27 11:13:04 PDT
Created attachment 195361 [details]
proposed patch
Comment 2 WebKit Review Bot 2013-03-27 12:31:42 PDT
Comment on attachment 195361 [details]
proposed patch

Attachment 195361 [details] did not pass chromium-ews (chromium-xvfb):
Output: http://webkit-commit-queue.appspot.com/results/17314416

New failing tests:
fast/regions/shape-inside/shape-inside-on-additional-regions.html
Comment 3 WebKit Review Bot 2013-03-27 12:31:46 PDT
Created attachment 195379 [details]
Archive of layout-test-results from gce-cr-linux-01 for chromium-linux-x86_64

The attached test failures were seen while running run-webkit-tests on the chromium-ews.
Bot: gce-cr-linux-01  Port: chromium-linux-x86_64  Platform: Linux-3.3.8-gcg-201212281604-x86_64-with-GCEL-10.04-gcel_10.04
Comment 4 Zoltan Horvath 2013-03-27 14:30:52 PDT
Created attachment 195395 [details]
proposed patch - test modified to use Ahem font
Comment 5 Dave Hyatt 2013-03-28 13:37:44 PDT
Comment on attachment 195395 [details]
proposed patch - test modified to use Ahem font

r=me
Comment 6 WebKit Review Bot 2013-03-28 14:00:09 PDT
Comment on attachment 195395 [details]
proposed patch - test modified to use Ahem font

Clearing flags on attachment: 195395

Committed r147155: <http://trac.webkit.org/changeset/147155>
Comment 7 WebKit Review Bot 2013-03-28 14:00:12 PDT
All reviewed patches have been landed.  Closing bug.