[CSS Exclusions][CSS Regions] Block children do not layout inline content correctly in a region with shape-inside set https://bugs.webkit.org/show_bug.cgi?id=112177

Reviewed by David Hyatt.

Source/WebCore:

When we had two multiple regions and a shape-inside was applied on the second region, but not on the first region and the content contained
paragraphs, the content was pushed down almost to the bottom in the second region. In a flow thread this behavior caused by the lack of the
proper updating of absoluteLogicalTop in RenderBlock::layoutRunsAndFloatsInRange function.

Tests: fast/regions/shape-inside/shape-inside-on-additional-regions.html
       fast/regions/shape-inside/shape-inside-on-regions.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::layoutRunsAndFloatsInRange): Update the value of absoluteLogicalTop in every run when we are in a flow thread.

LayoutTests:

Add a new subdirectory for regions shape-inside tests. Move old and add new test files to the directory.

* fast/regions/shape-inside: Added.
* fast/regions/shape-inside/shape-inside-on-additional-regions-expected.html: Added.
* fast/regions/shape-inside/shape-inside-on-additional-regions.html: Added.
* fast/regions/shape-inside/shape-inside-on-regions-expected.html: Renamed from LayoutTests/fast/regions/shape-inside-on-regions-expected.html.
* fast/regions/shape-inside/shape-inside-on-regions.html: Renamed from LayoutTests/fast/regions/shape-inside-on-regions.html.


Canonical link: https://commits.webkit.org/131880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147155 268f45cc-cd09-0410-ab3c-d52691b4dbfc